force-app/main/default/objects/HFS_Agreement__c/HFS_Agreement__c.object-meta.xml
<CustomObject>
    <description>Agreement, promise, obligation, or material terms between entities.</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>AGR-{000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>