force-app/main/default/objects/HFS_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>