force-app/main/default/objects/HFS_Agreement__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>