force-app/main/default/objects/HFS_Agreement__c/fields/Material_Terms_JSON__c.field-meta.xml
<CustomField>
    <fullName>Material_Terms_JSON__c</fullName>
    <label>Material Terms JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>