force-app/main/default/objects/HFS_Agreement__c/fields/Party_One__c.field-meta.xml
<CustomField>
    <fullName>Party_One__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Party One</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Agreements by Party One</relationshipLabel>
    <relationshipName>HFS_Agreement_Party_One</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>