force-app/main/default/objects/HFS_Agreement__c/fields/Party_Two__c.field-meta.xml
<CustomField>
    <fullName>Party_Two__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Party Two</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Agreements by Party Two</relationshipLabel>
    <relationshipName>HFS_Agreement_Party_Two</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>