force-app/main/default/objects/HFS_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
                <label>Suspended</label>
            </value>
            <value>
                <fullName>TERMINATED</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>