force-app/main/default/objects/HFS_Agreement__c/fields/Terms_Summary__c.field-meta.xml
<CustomField>
    <fullName>Terms_Summary__c</fullName>
    <label>Terms Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>