force-app/main/default/objects/HFS_Agreement__c/validationRules/Different_Parties.validationRule-meta.xml
<ValidationRule>
    <fullName>Different_Parties</fullName>
    <active>true</active>
    <description>An agreement must have two different parties.</description>
    <errorConditionFormula>Party_One__c = Party_Two__c</errorConditionFormula>
    <errorMessage>An agreement must have two different parties.</errorMessage>
</ValidationRule>