force-app/main/default/objects/HFS_Agreement__c/validationRules/Effective_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date_Range</fullName>
    <active>true</active>
    <description>Effective To cannot be earlier than Effective From.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula>
    <errorMessage>Effective To cannot be earlier than Effective From.</errorMessage>
</ValidationRule>